# ocular

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  SECURITY.md  install-hooks.sh
.claude/skills/ocular-design/: SKILL.md
.githooks/: pre-commit
.github/: dependabot.yaml
.github/workflows/: automerge.yaml  ci.yaml  dockerimage.yaml  release.yaml
backend/: CLAUDE.md  pyproject.toml
backend/src/ocular/: __init__.py  __main__.py  camera.py  config.py  main.py  pipeline.py  store.py  web.py
backend/src/ocular/detectors/: __init__.py  revolution.py
frontend/: CLAUDE.md  eslint.config.js  index.html  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/scripts/: gen-icons.sh
frontend/src/: App.svelte  api.ts  app.css  main.ts
frontend/src/lib/: Controls.svelte  Counter.svelte  History.svelte  LiveView.svelte  Wordmark.svelte
frontend/src/styles/: colors_and_type.css
